--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEHDI et Yani - Site Web Professionnel</title>
-    <link rel="stylesheet" href="Yani.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
