--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </section>
       <section class="motivation">
         <h2>Motivation</h2>
-        <p>Madame, Monsieur,
+        <pre>Madame, Monsieur,
 
 Actuellement étudiant en licence d'informatique à l'université du Havre, je suis à la recherche d'un contrat d'alternance pour poursuivre mes études en parallèle avec une expérience professionnelle. C'est avec beaucoup d'intérêt que j'ai appris que votre entreprise propose des contrats d'alternance dans le domaine de l'informatique.
 
@@ -29,7 +29,7 @@ Je me tiens à votre disposition pour tout entretien que vous souhaiteriez me pr
 
 Je vous prie d'agréer, Madame, Monsieur, l'expression de mes salutations distinguées.
 
-MEHDI Yani</p>
+MEHDI Yani</pre>
       </section>
     </main>
     <footer>
